{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "1c911c1a-1c52-401e-a707-971a394314b3",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "4253a928-38c5-4709-8a3d-f36ef4fb880c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "92eb5edd-2b39-463c-9c43-9d78dee86afb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpAction",
                    "type": "Button",
                    "id": "203fe126-2353-4481-9a05-0c018ed186ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftAction",
                    "type": "Button",
                    "id": "467a00e2-b924-4968-acee-71d22706b59f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightAction",
                    "type": "Button",
                    "id": "3afa1b37-7650-428e-a8d4-b1e083d17fa0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2a159bcf-589c-48c5-bd22-a1d75a8ea5f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Recall",
                    "type": "Button",
                    "id": "511c20f1-9e16-47ec-859c-b948a63dcc96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeaveShield",
                    "type": "Button",
                    "id": "78d9ecbb-fcd1-42bd-8f6f-646f2fc3d2ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f63f535-0286-4b50-af16-86d40fee61fc",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79282131-cd2f-4141-9a40-938ad8352645",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "UpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb86ee54-09b8-4b8e-856b-0697858b242a",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "Press(pressPoint=0.1,behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce3d7005-5aec-45af-bf31-dbd6440d1cfc",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "Press(pressPoint=0.1,behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "RightAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00f7878a-50ce-4388-b214-ca384b47372c",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d45de48d-cfa5-4aa9-90ba-ce1fde45bd54",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Recall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3f24f87-39c3-4382-ae52-9529cb9ee760",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveShield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7e90262c-d49a-41cf-8e1a-4ce355e1694a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cc03515f-a475-4c7a-bce6-f5ed72d28e47",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5e38054e-634e-4c2d-b500-b3a77e26824b",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e1d89cc-5cb3-4f8a-990f-ffd72bae1263",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3f9779ca-58fb-4f8f-bbe3-d608ed8621af",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "a1c1cc39-70b0-4540-90e3-b20f6dd20fcd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2e3d9094-5e97-40c9-afe9-e78f23fe3c99",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "db3bd1cf-bde2-45a7-b12c-40eafe1ea866",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "141cbfff-9e33-4da3-9543-43e566bf6461",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9cd31fce-5480-4ee2-b6dc-1920249a818f",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Xbox Control Scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox Control Scheme",
            "bindingGroup": "Xbox Control Scheme",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}